# projeto-redes-neurais

./: README.md  project.ipynb  project_data.ipynb  project_models.ipynb  project_results.ipynb  pyproject.toml
data/: maintenance.csv  statlog.csv  student_success.csv
