[project]
name = "projeto-redes-neurais"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel==6.29.5",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scikit-learn==1.5.2",
    "mlx>=0.22.0",
    "tqdm==4.67.1",
    "ucimlrepo==0.0.7",
    "xgboost==3.2.0",
]
